Name:                Elm
Version:             0.10.0.2
Synopsis:            The Elm language module.
Description:         Elm aims to make client-side web-development more pleasant.
                     It is a statically/strongly typed, functional reactive
                     language to HTML, CSS, and JS. This package provides a
                     library for Elm compilation in Haskell and a compiler
                     executable.

Homepage:            http://elm-lang.org

License:             BSD3
License-file:        LICENSE

Author:              Evan Czaplicki
Maintainer:          info@elm-lang.org
Copyright:           Copyright: (c) 2011-2013 Evan Czaplicki

Category:            Compiler, Language

Build-type:          Custom

Extra-source-files:  changelog.txt
Data-dir:            data
Data-files:          elm-runtime.js interfaces.data docs.json
Cabal-version:       >=1.9

source-repository head
  type:     git
  location: git://github.com/evancz/Elm.git

Library
  exposed-modules:     Language.Elm
                       Elm.Internal.Dependencies,
                       Elm.Internal.Documentation,
                       Elm.Internal.Name,
                       Elm.Internal.Paths,
                       Elm.Internal.Utils,
                       Elm.Internal.Version
  Hs-Source-Dirs:      compiler
  other-modules:       SourceSyntax.Declaration,
                       SourceSyntax.Expression,
                       SourceSyntax.Helpers,
                       SourceSyntax.Literal,
                       SourceSyntax.Location,
                       SourceSyntax.Module,
                       SourceSyntax.Pattern,
                       SourceSyntax.PrettyPrint,
                       SourceSyntax.Type,
                       Generate.JavaScript,
                       Generate.Noscript,
                       Generate.Markdown,
                       Generate.Html,
                       Generate.Cases,
                       Transform.Canonicalize,
                       Transform.Check,
                       Transform.SafeNames,
                       Transform.SortDefinitions,
                       Transform.Substitute,
                       Transform.Optimize,
                       Metadata.Prelude,
                       InterfaceSerialization,
                       Parse.Binop,
                       Parse.Declaration,
                       Parse.Expression,
                       Parse.Helpers,
                       Parse.Literal,
                       Parse.Module,
                       Parse.Parse,
                       Parse.Pattern,
                       Parse.Type,
                       Type.Alias,
                       Type.Constrain.Declaration,
                       Type.Constrain.Expression,
                       Type.Constrain.Literal,
                       Type.Constrain.Pattern,
                       Type.Environment,
                       Type.ExtraChecks,
                       Type.Fragment,
                       Type.Inference,
                       Type.PrettyPrint,
                       Type.Solve,
                       Type.State,
                       Type.Type,
                       Type.Unify,
                       Build.Dependencies,
                       Build.File,
                       Build.Flags,
                       Build.Print,
                       Build.Source,
                       Build.Utils,
                       Paths_Elm

  Build-depends:       aeson,
                       base >=4.2 && <5,
                       binary >= 0.6.4.0,
                       blaze-html == 0.5.* || == 0.6.*,
                       blaze-markup,
                       bytestring,
                       cmdargs,
                       containers >= 0.3,
                       directory,
                       filepath,
                       indents,
                       language-ecmascript >=0.15 && < 1.0,
                       mtl >= 2,
                       pandoc >= 1.10,
                       parsec >= 3.1.1,
                       pretty,
                       text,
                       transformers >= 0.2,
                       union-find,
                       unordered-containers

Executable elm
  Main-is:             Compiler.hs
  ghc-options:         -threaded -O2
  Hs-Source-Dirs:      compiler
  other-modules:       SourceSyntax.Declaration,
                       SourceSyntax.Expression,
                       SourceSyntax.Helpers,
                       SourceSyntax.Literal,
                       SourceSyntax.Location,
                       SourceSyntax.Module,
                       SourceSyntax.Pattern,
                       SourceSyntax.PrettyPrint,
                       SourceSyntax.Type,
                       Generate.JavaScript,
                       Generate.Noscript,
                       Generate.Markdown,
                       Generate.Html,
                       Generate.Cases,
                       Transform.Canonicalize,
                       Transform.Check,
                       Transform.SafeNames,
                       Transform.SortDefinitions,
                       Transform.Substitute,
                       Transform.Optimize,
                       Metadata.Prelude,
                       InterfaceSerialization,
                       Parse.Binop,
                       Parse.Declaration,
                       Parse.Expression,
                       Parse.Helpers,
                       Parse.Literal,
                       Parse.Module,
                       Parse.Parse,
                       Parse.Pattern,
                       Parse.Type,
                       Type.Alias,
                       Type.Constrain.Declaration,
                       Type.Constrain.Expression,
                       Type.Constrain.Literal,
                       Type.Constrain.Pattern,
                       Type.Environment,
                       Type.ExtraChecks,
                       Type.Fragment,
                       Type.Inference,
                       Type.PrettyPrint,
                       Type.Solve,
                       Type.State,
                       Type.Type,
                       Type.Unify,
                       Build.Dependencies,
                       Build.File,
                       Build.Flags,
                       Build.Print,
                       Build.Source,
                       Build.Utils,
                       Paths_Elm

  Build-depends:       aeson,
                       base >=4.2 && <5,
                       binary >= 0.6.4.0,
                       blaze-html == 0.5.* || == 0.6.*,
                       blaze-markup == 0.5.1.*,
                       bytestring,
                       cmdargs,
                       containers >= 0.3,
                       directory,
                       filepath,
                       indents,
                       language-ecmascript >=0.15 && < 1.0,
                       mtl >= 2,
                       pandoc >= 1.10,
                       parsec >= 3.1.1,
                       pretty,
                       text,
                       transformers >= 0.2,
                       union-find,
                       unordered-containers

Executable elm-doc
  Main-is:             Docs.hs
  Hs-Source-Dirs:      compiler
  other-modules:       SourceSyntax.Declaration,
                       SourceSyntax.Expression,
                       SourceSyntax.Helpers,
                       SourceSyntax.Literal,
                       SourceSyntax.Location,
                       SourceSyntax.Module,
                       SourceSyntax.Pattern,
                       SourceSyntax.PrettyPrint,
                       SourceSyntax.Type,
                       Parse.Binop,
                       Parse.Declaration,
                       Parse.Expression,
                       Parse.Helpers,
                       Parse.Literal,
                       Parse.Module,
                       Parse.Pattern,
                       Parse.Type

  Build-depends:       aeson,
                       aeson-pretty,
                       base >=4.2 && <5,
                       binary >= 0.6.4.0,
                       bytestring,
                       cmdargs,
                       containers >= 0.3,
                       directory,
                       filepath,
                       indents,
                       mtl >= 2,
                       pandoc >= 1.10,
                       parsec >= 3.1.1,
                       pretty,
                       text

Test-Suite test-elm
  Type:            exitcode-stdio-1.0
  Hs-Source-Dirs:  tests
  Main-is:         Main.hs
  build-depends:   base, directory, HTF
