Name:                Elm
Version:             0.12.1
Synopsis:            The Elm language module.
Description:         Elm aims to make client-side web-development more pleasant.
                     It is a statically/strongly typed, functional reactive
                     language to HTML, CSS, and JS. This package provides a
                     library for Elm compilation in Haskell and a compiler
                     executable.

Homepage:            http://elm-lang.org

License:             BSD3
License-file:        LICENSE

Author:              Evan Czaplicki
Maintainer:          info@elm-lang.org
Copyright:           Copyright: (c) 2011-2014 Evan Czaplicki

Category:            Compiler, Language

Build-type:          Custom

Extra-source-files:  changelog.md
Data-dir:            data
Data-files:          elm-runtime.js interfaces.data docs.json
Cabal-version:       >=1.9

source-repository head
  type:     git
  location: git://github.com/elm-lang/Elm.git

Library
  exposed-modules:     Elm.Internal.Dependencies,
                       Elm.Internal.Documentation,
                       Elm.Internal.Name,
                       Elm.Internal.Paths,
                       Elm.Internal.Utils,
                       Elm.Internal.Version
  Hs-Source-Dirs:      compiler
  other-modules:       SourceSyntax.Annotation,
                       SourceSyntax.Declaration,
                       SourceSyntax.Expression,
                       SourceSyntax.Helpers,
                       SourceSyntax.Literal,
                       SourceSyntax.Module,
                       SourceSyntax.Pattern,
                       SourceSyntax.PrettyPrint,
                       SourceSyntax.Type,
                       SourceSyntax.Variable,
                       Generate.JavaScript,
                       Generate.JavaScript.Helpers,
                       Generate.JavaScript.Ports,
                       Generate.Markdown,
                       Generate.Html,
                       Generate.Cases,
                       Transform.Canonicalize,
                       Transform.Check,
                       Transform.Expression,
                       Transform.Declaration,
                       Transform.Definition,
                       Transform.SafeNames,
                       Transform.SortDefinitions,
                       Transform.Substitute,
                       Metadata.Prelude,
                       Parse.Binop,
                       Parse.Declaration,
                       Parse.Expression,
                       Parse.Helpers,
                       Parse.Literal,
                       Parse.Module,
                       Parse.Parse,
                       Parse.Pattern,
                       Parse.Type,
                       Type.Alias,
                       Type.Constrain.Declaration,
                       Type.Constrain.Expression,
                       Type.Constrain.Literal,
                       Type.Constrain.Pattern,
                       Type.Environment,
                       Type.ExtraChecks,
                       Type.Fragment,
                       Type.Inference,
                       Type.PrettyPrint,
                       Type.Solve,
                       Type.State,
                       Type.Type,
                       Type.Unify,
                       Build.Dependencies,
                       Build.File,
                       Build.Flags,
                       Build.Interface,
                       Build.Print,
                       Build.Source,
                       Build.Utils,
                       Paths_Elm

  Build-depends:       aeson,
                       aeson-pretty,
                       base >=4.2 && <5,
                       binary >= 0.7.0.0,
                       blaze-html >= 0.5 && < 0.8,
                       blaze-markup,
                       bytestring,
                       cmdargs,
                       containers >= 0.3,
                       directory,
                       filepath,
                       indents,
                       language-ecmascript >=0.15 && < 1.0,
                       mtl >= 2,
                       pandoc >= 1.10,
                       parsec >= 3.1.1,
                       pretty,
                       text,
                       transformers >= 0.2,
                       union-find,
                       unordered-containers

Executable elm
  Main-is:             Compiler.hs
  ghc-options:         -threaded -O2
  Hs-Source-Dirs:      compiler
  other-modules:       SourceSyntax.Annotation,
                       SourceSyntax.Declaration,
                       SourceSyntax.Expression,
                       SourceSyntax.Helpers,
                       SourceSyntax.Literal,
                       SourceSyntax.Module,
                       SourceSyntax.Pattern,
                       SourceSyntax.PrettyPrint,
                       SourceSyntax.Type,
                       SourceSyntax.Variable,
                       Generate.JavaScript,
                       Generate.JavaScript.Helpers,
                       Generate.JavaScript.Ports,
                       Generate.Markdown,
                       Generate.Html,
                       Generate.Cases,
                       Transform.Canonicalize,
                       Transform.Check,
                       Transform.Expression,
                       Transform.Declaration,
                       Transform.Definition,
                       Transform.SafeNames,
                       Transform.SortDefinitions,
                       Transform.Substitute,
                       Metadata.Prelude,
                       Parse.Binop,
                       Parse.Declaration,
                       Parse.Expression,
                       Parse.Helpers,
                       Parse.Literal,
                       Parse.Module,
                       Parse.Parse,
                       Parse.Pattern,
                       Parse.Type,
                       Type.Alias,
                       Type.Constrain.Declaration,
                       Type.Constrain.Expression,
                       Type.Constrain.Literal,
                       Type.Constrain.Pattern,
                       Type.Environment,
                       Type.ExtraChecks,
                       Type.Fragment,
                       Type.Inference,
                       Type.PrettyPrint,
                       Type.Solve,
                       Type.State,
                       Type.Type,
                       Type.Unify,
                       Build.Dependencies,
                       Build.File,
                       Build.Flags,
                       Build.Interface,
                       Build.Print,
                       Build.Source,
                       Build.Utils,
                       Paths_Elm

  Build-depends:       aeson,
                       aeson-pretty,
                       base >=4.2 && <5,
                       binary >= 0.7.0.0,
                       blaze-html >= 0.5 && < 0.8,
                       blaze-markup,
                       bytestring,
                       cmdargs,
                       containers >= 0.3,
                       directory,
                       filepath,
                       indents,
                       language-ecmascript >=0.15 && < 1.0,
                       mtl >= 2,
                       pandoc >= 1.10,
                       parsec >= 3.1.1,
                       pretty,
                       text,
                       transformers >= 0.2,
                       union-find,
                       unordered-containers

Executable elm-doc
  Main-is:             Docs.hs
  Hs-Source-Dirs:      compiler
  other-modules:       SourceSyntax.Annotation,
                       SourceSyntax.Declaration,
                       SourceSyntax.Expression,
                       SourceSyntax.Helpers,
                       SourceSyntax.Literal,
                       SourceSyntax.Module,
                       SourceSyntax.Pattern,
                       SourceSyntax.PrettyPrint,
                       SourceSyntax.Type,
                       SourceSyntax.Variable,
                       Parse.Binop,
                       Parse.Declaration,
                       Parse.Expression,
                       Parse.Helpers,
                       Parse.Literal,
                       Parse.Module,
                       Parse.Pattern,
                       Parse.Type

  Build-depends:       aeson,
                       aeson-pretty,
                       base >=4.2 && <5,
                       binary >= 0.7.0.0,
                       bytestring,
                       cmdargs,
                       containers >= 0.3,
                       directory,
                       filepath,
                       indents,
                       mtl >= 2,
                       pandoc >= 1.10,
                       parsec >= 3.1.1,
                       pretty,
                       text,
                       union-find

Test-Suite compiler-tests
  Type:            exitcode-stdio-1.0
  Hs-Source-Dirs:  tests/hs, compiler
  Main-is:         CompilerTest.hs
  other-modules:   Tests.Compiler
                   Tests.Property
                   Tests.Property.Arbitrary
                   SourceSyntax.Helpers
                   SourceSyntax.Literal
                   SourceSyntax.PrettyPrint
  build-depends:   test-framework,
                   test-framework-hunit,
                   test-framework-quickcheck2 >= 0.3,
                   HUnit,
                   QuickCheck >= 2 && < 3,
                   aeson,
                   aeson-pretty,
                   base >=4.2 && <5,
                   binary >= 0.7.0.0,
                   blaze-html,
                   blaze-markup,
                   bytestring,
                   cmdargs,
                   containers >= 0.3,
                   directory,
                   Elm,
                   filemanip,
                   filepath,
                   indents,
                   language-ecmascript >=0.15 && < 1.0,
                   mtl >= 2,
                   pandoc >= 1.10,
                   parsec >= 3.1.1,
                   pretty,
                   text,
                   transformers >= 0.2,
                   union-find,
                   unordered-containers

Test-Suite lib-tests
  Type:            exitcode-stdio-1.0
  Hs-Source-Dirs:  tests/hs
  Main-is:         LibTest.hs
  build-depends:   base,
                   directory,
                   Elm,
                   filepath,
                   process
